[gd_scene load_steps=5 format=3 uid="uid://2rp83w7nquwr"]

[ext_resource type="Script" path="res://Interface/MainMenu/MainMenu.gd" id="1_wp86f"]
[ext_resource type="FontFile" uid="uid://cl2sm0imtr5ca" path="res://Font/zAwakenedBit.ttf" id="2_dj5qm"]

[sub_resource type="Gradient" id="Gradient_wjv1b"]
colors = PackedColorArray(0, 0, 0, 0.498039, 0, 0, 0, 0.74902)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ncv8f"]
gradient = SubResource("Gradient_wjv1b")
fill_to = Vector2(0, 1)

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wp86f")

[node name="Backdrop" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_ncv8f")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 128)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dj5qm")
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 128)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dj5qm")
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 128)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dj5qm")
theme_override_font_sizes/font_size = 32
text = "Exit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
